--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>squarbo_description</name>
-  <version>2.0.1</version>
+  <version>1.0.0</version>
   <description>
     Squarbo Model
   </description>
@@ -11,6 +11,8 @@
   <maintainer email="borgesjvt@gmail.com">Joao Victor Torres Borges</maintainer>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <exec_depend>joint_state_publisher</exec_depend>
+  <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rviz2</exec_depend>
   <depend>urdf</depend>
